<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_share"
        android:title="@string/share_application"
        yourapp:showAsAction="never"
        android:orderInCategory="101"
        yourapp:actionProviderClass="android.support.v7.widget.ShareActionProvider" />

    <item android:id="@+id/action_rate"
        android:title="@string/rate"
        android:orderInCategory="102"
        app:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="103"
        app:showAsAction="never" />

</menu>
