<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:padding="20dp">

    <Switch
        android:id="@+id/changeWallpaperSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/change_wallpaper_switch"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/changeWallpaperSwitch"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <RadioButton
            android:id="@+id/radio_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/every_hour"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/every_two"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_eight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/every_eight"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/every_day"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_two_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/every_two_days"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_three_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/every_three_days"
            android:textSize="18sp" />

    </RadioGroup>

    <Button
        android:id="@+id/doneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:text="@string/done" />
</RelativeLayout>


