<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-light"
        android:text="Merisi is made with"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/heartImageButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/circle_button"
        android:contentDescription="@string/heart_image_contentdescriptor"
        android:src="@drawable/ic_favorite_white_36dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heartImageButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/my_twitter"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/egzoTwitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/egzo_twitter"
        android:textSize="14sp" />

</RelativeLayout>