<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.andreapivetta.changemywall.FullWallpaperActivity">

    <ImageView
        android:id="@+id/fullImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/full_wall_contentdescription"
        android:maxHeight="350dp" />

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullImageView"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resTextTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:gravity="start"
            android:padding="8dp"
            android:text="RES"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/resTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:padding="8dp"
            android:text="1920 x 1080"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="italic" />

    </LinearLayout>


    <ImageButton
        android:id="@+id/addToLibraryButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/circle_button"
        android:contentDescription="@string/download_button_contentdescriptor"
        android:elevation="4dp"
        android:src="@drawable/ic_file_download_white_24dp" />

    <ImageButton
        android:id="@+id/zoomImageButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/setAsBackgroundButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout"
        android:background="@drawable/button_background"
        android:contentDescription="@string/zoom_image_content_descriptor"
        android:elevation="2dp"
        android:src="@drawable/ic_fullscreen_white_24dp" />

    <Button
        android:id="@+id/setAsBackgroundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:layout_toLeftOf="@+id/zoomImageButton"
        android:layout_toStartOf="@+id/zoomImageButton"
        android:background="@drawable/button_background"
        android:elevation="2dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/set_as"
        android:textSize="20sp" />


</RelativeLayout>
